v1.1.7
   Retrieves personal  number from DG11 (if its present) otherwise fall back to DG1 (as per ICAO Docs) - thanks @TerjeLon
   Added support for BDC Date/time encoding for DG12 - thanks @jakub-vallo 
   
V1.1.6
   Fixed tag in DG11 - Thanks @Jusstas.
   Fixed deploying to iOS 12 - added weak framework CryptoTokenKit to podspec - thanks @Jeroenbb94
   Fixed crash in getNextTag when not enough data is present (happens with some passports) - thanks @Benny-iPhone
   
   
V1.1.5
   Fixed potential issue when checking for invalid ECDSA signatures. Now rather than assuming if both BigNums
     have a zero prefix, we actually check the bignums for validity.
   Added ability to skip Chip Authentication and PACE (use the new skipCA and skipPACE parameters on
     readPassport)
   Added some additional logging and changed some existing logging catagories 

v1.1.4
   Fixed use of ephemeral params that managed to get reverted!
   Added a couple of addition error messages to TagReader
   Added MRZ key logging

v1.1.3
    Fix for some ECDSA based message digests which seem to have invalid format (0x00 prefixed on the integers)
       See OpenSSLUtils :: verifySignature for details on the fix
       Thanks to @wellbranding for the report and helping test

v1.1.2
    Implemented PACE
       Currently only GM mapping is supported (IM and CAM not yet), but supports both ECDH and DH encryption
            Many thanks to @filom again for really helping me debug and fix the DH implementation!
    Added ability to select MasterFile and also reselect the eMRTD application record
    Now tries to read the CardAccess file (in master record) - required for PACE
    Fix to use extended length if the size of the protected APDU is more than 255 chars
       Changed wrapDO/unwrapDO to use TKBERTLVRecord to handle the encoding/decoding rather than doing it manually
       Thanks again to @filom for this fix.
    Some fixes to Chip Authentication not freeing up some objects correctly,